--- a/src/components/CSVReaderButtons/CSVReaderButtons.module.scss
+++ b/src/components/CSVReaderButtons/CSVReaderButtons.module.scss
@@ -1,4 +1,9 @@
-.root {
+.root{
+  display: flex;
+  align-items: center;
+
+}
+.button {
   display: inline-flex;
   outline: none;
   align-items: center;
@@ -19,10 +24,6 @@
   border: none;
   font-size: 16px;
 }
-.secondary{
-  background: transparent;
-  border-radius: 8px;
-  color: rgb(0, 107, 214);
-  box-shadow: none;
-  text-shadow: none;
+.import{
+  margin-right: 15px;
 }
