--- a/src/components/ConfirmModal/ConfirmModal.module.scss
+++ b/src/components/ConfirmModal/ConfirmModal.module.scss
@@ -4,3 +4,12 @@
   align-items: center;
   margin-top: 10px;
 }
+.overlay{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgba(0,0,0,0.3);
+  top: 0;
+  left: 0;
+  z-index: 9;
+}
