--- a/src/components/ListContainer/ListContainer.module.scss
+++ b/src/components/ListContainer/ListContainer.module.scss
@@ -21,7 +21,8 @@
     border-bottom-left-radius: 0px;
   }
 }
-.closedMenu{
+
+.closedMenu {
   position: absolute;
   padding: 20px 10px;
   z-index: 2;
@@ -31,6 +32,7 @@
   background: white;
   border-top-left-radius: 12px;
   border-bottom-left-radius: 12px;
+  width: unset;
   @media screen and (max-width: 768px) {
     width: 100%;
     top: calc(100vh - 70px);
@@ -42,9 +44,13 @@
     border-bottom-left-radius: 0px;
   }
 }
+
 .items {
-  height: calc(100% - 55px);
+  height: calc(100vh - 130px);
   overflow: auto;
+  @media screen and (max-width: 768px) {
+    height: 28vh;
+  }
 }
 
 .empty {
@@ -56,5 +62,15 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  margin-bottom: 20px;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.import {
+  margin-right: 20px;
+
 }
