--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -26,3 +26,16 @@
 .lat, .lng {
   line-height: 24px;
 }
+
+.modal {
+  position: absolute;
+  top: 40%;
+  left: 0;
+  right: 0;
+  background: white;
+  width: 300px;
+  margin: auto;
+  padding: 20px;
+  border-radius: 8px;
+  z-index: 9;
+}
