--- a/src/components/GoogleMap/GoogleMap.module.scss
+++ b/src/components/GoogleMap/GoogleMap.module.scss
@@ -1,5 +1,20 @@
-.map{
-  *{
+.map {
+  * {
     cursor: pointer;
+  }
+}
+
+.root {
+  width: 100%;
+}
+
+.select {
+  position: absolute;
+  bottom: 0;
+  z-index: 9;
+  width: 200px;
+  @media screen and (max-width: 768px) {
+    top: 60px;
+    left: 10px;
   }
 }
