--- a/src/components/GoogleMap/GoogleMap.module.scss
+++ b/src/components/GoogleMap/GoogleMap.module.scss
@@ -13,6 +13,7 @@
   bottom: 0;
   z-index: 9;
   width: 200px;
+  height: 57px;
   @media screen and (max-width: 768px) {
     top: 60px;
     left: 10px;
